klar til at merge

--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -9,18 +9,9 @@ const data = await fetch(
     },
   }
 ).then((res) => res.json());
-import Button from "./Button.astro";
 ---
-<!-- <Button>
-  VÆRKER
-</Button>
-<Button>
-  POPUP
-</Button>
-<Button>
-  EXTRA
-</Button> -->
 
+<video src="https://player.vimeo.com/video/802387040?background=1&amp;wmode=opaque"></video>
 <section class="timeline">
   <ul>
     <li>
