Fået logoet tilbage

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -2,7 +2,7 @@
   <nav>
     <div class="logo">
       <a href="#">
-        <img src="./img/asdfgyhuji.png" alt="" />
+        <img src="../img/asdfgyhuji.png" alt="" />
       </a>
     </div>
     <div class="menu-container">
