--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ import ImgButton from "../components/ImgButton.astro";
           </div>
         </div>
       </div>
-      <h5>Partner</h5>
+      <h5>Fonde</h5>
       <div class="gridimg">
         <img src="img/logo1.png" alt="logo1" class="glypto" />
         <img src="img/logo2.png" alt="logo2" class="nordbro" />
@@ -96,16 +96,30 @@ import ImgButton from "../components/ImgButton.astro";
       }
       h5 {
         text-align: center;
-        font-size: var(--font-size-banner);
-        margin-bottom: 100px;
-        margin-top: 20px;
+        font-size: var(--font-size-button);
+
+        margin-top: 80px;
+        margin-bottom: 30px;
       }
       .gridimg {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
+        margin-left: 100px;
+      }
+      .glypto {
+        width: 250px;
+        height: auto;
       }
       .nordbro {
-        width: 300px;
+        width: 250px;
+        height: auto;
+      }
+      .ano {
+        width: 250px;
+        height: auto;
+      }
+      .kbh {
+        width: 200px;
         height: auto;
       }
 
