scroll up button done

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
 import Banner from "../components/Banner.astro";
 import ImgButton from "../components/ImgButton.astro";
+import Scroll from "../components/Scroll.astro";
 ---
 
 <html lang="da">
@@ -25,6 +26,7 @@ import ImgButton from "../components/ImgButton.astro";
     <meta name="generator" content={Astro.generator} />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 
     <title>Forside</title>
   </head>
@@ -62,6 +64,7 @@ import ImgButton from "../components/ImgButton.astro";
         <img src="img/logo2.png" alt="logo2" class="nordbro" />
         <img src="img/logo3.png" alt="logo3" class="ano" />
         <img src="img/logo4.png" alt="logo4" class="kbh" />
+        <Scroll />
       </div>
     </main>
 
