--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
 import Banner from "../components/Banner.astro";
 import ImgButton from "../components/ImgButton.astro";
+import Tekstbox from "../components/TekstBox.astro";
 ---
 
 <html lang="da">
@@ -56,6 +57,7 @@ import ImgButton from "../components/ImgButton.astro";
           </div>
         </div>
       </div>
+      <Tekstbox />
       <h5>Partner</h5>
       <div class="gridimg">
         <img src="img/logo1.png" alt="logo1" class="glypto" />
