--- a/src/pages/liste.astro
+++ b/src/pages/liste.astro
@@ -10,10 +10,11 @@ const data = await fetch(
   }
 ).then((res) => res.json());
 
-import Timeline from "../components/Timeline.astro";
 import "../global_css/style.css";
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
+import Timeline from "../components/Timeline.astro";
+import Button from "../components/Button.astro";
 ---
 
 <html lang="da">
@@ -28,15 +29,14 @@ import Footer from "../components/Footer.astro";
     <title>Forside</title>
   </head>
   <body>
-    <h1>Forside</h1>
-    <a href=""></a>
+    <Nav />
+    <Button href="#vaerker">VÆRKER</Button>
+    <Button href="#popup">POP-UP</Button>
+    <Button href="#extralight">EXTRA</Button>
 
     <section class="artworks">
-      {
-        data.map((artwork) => {
-          return <Timeline data={artwork} />;
-        })
-      }
+      <Timeline />
     </section>
+    <Footer />
   </body>
 </html>
