--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -10,8 +10,9 @@ const data = await fetch(
   }
 ).then((res) => res.json());
 ---
+
 <section class="timeline">
-  <ul>
+   <ul>
     <li>
       <h3>VÆRKER</h3>
     </li>
@@ -21,7 +22,7 @@ const data = await fetch(
         .map((myData) => (
           <li>
            <a href={"/artworks/" + myData.slug}>
-           <div class="container">
+           <div class="container"  id="vaerker">
            <img src={myData.img} alt="" class="image" />
            <p class="text">{myData.titel}</p>
            </div>
@@ -38,7 +39,7 @@ const data = await fetch(
         .map((myData) => (
           <li>
             <a href={"/artworks/" + myData.slug}>
-           <div class="container">
+           <div class="container"  id="popup">
            <img src={myData.img} alt="" class="image" />
            <p class="text">{myData.titel}</p>
            </div>
@@ -55,7 +56,7 @@ const data = await fetch(
         .map((myData) => (
           <li>
   <a href={"/artworks/" + myData.slug}>
-           <div class="container">
+           <div class="container"  id="extralight">
            <img src={myData.img} alt="" class="image" />
            <p class="text">{myData.titel}</p>
            </div>
@@ -133,6 +134,7 @@ display: block;
   }
 
   .timeline {
+  margin-top: 80px;
   margin-bottom: 80px;}
 
   .timeline ul {
