--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -13,7 +13,9 @@ const data = await fetch(
 import Button from "../components/Button.astro";
 ---
 <section class="button-container">
-<Button>VÆRKER</Button>
+<Button>
+    VÆRKER
+</Button>
 <Button>POP-UP</Button>
 <Button>EXTRA</Button>
 </section>
