--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,7 @@ import Footer from "../components/Footer.astro";
 import Banner from "../components/Banner.astro";
 import ImgButton from "../components/ImgButton.astro";
 import Tekstbox from "../components/TekstBox.astro";
+import Tekstbox2 from "../components/TekstBox2.astro";
 ---
 
 <html lang="da">
@@ -52,11 +53,11 @@ import Tekstbox from "../components/TekstBox.astro";
           </Tekstbox>
         </div>
         <div>
-          <Tekstbox>
-            <h3 slot="h3">What is copenhagen light bla bla</h3>
+          <Tekstbox2>
+            <h3 slot="h3">What is copenhagen light blaedgfaebrfaerf bla</h3>
             <p slot="p1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, reiciendis? Consequuntur, ratione? Earum ab dignissimos voluptas quis neque doloribus excepturi, deleniti harum doloremque magni voluptatem eveniet magnam! Distinctio, hic corporis?</p>
             <p slot="p2">HEJ MED DIGIIIIIIIIIIIIIIIIIIIG</p>
-          </Tekstbox>
+          </Tekstbox2>
         </div>
       </div>
 
