--- a/src/pages/liste.astro
+++ b/src/pages/liste.astro
@@ -14,6 +14,7 @@ import "../global_css/style.css";
 import Nav from "../components/Nav.astro";
 import Footer from "../components/Footer.astro";
 import Timeline from "../components/Timeline.astro";
+import Scroll from "../components/Scroll.astro";
 ---
 
 <html lang="da">
@@ -32,6 +33,7 @@ import Timeline from "../components/Timeline.astro";
     <section class="artworks">
       <Timeline />
     </section>
+    <Scroll />
     <Footer />
   </body>
 </html>
