--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,14 +62,14 @@ import Tekstbox2 from "../components/TekstBox2.astro";
       <div class="gridabout">
         <div>
           <Tekstbox>
-            <h3 slot="h3">What is copenhagen light bla bla</h3>
+            <h3 slot="h3">WHAT IS COPENHAGEN LIGHT FESTIVAL?</h3>
             <p slot="p1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, reiciendis? Consequuntur, ratione? Earum ab dignissimos voluptas quis neque doloribus excepturi, deleniti harum doloremque magni voluptatem eveniet magnam! Distinctio, hic corporis?</p>
             <p slot="p2">HEJ MED DIGIIIIIIIIIIIIIIIIIIIG</p>
           </Tekstbox>
         </div>
         <div>
           <Tekstbox2>
-            <h3 slot="h3">What is copenhagen light blaedgfaebrfaerf bla</h3>
+            <h3 slot="h3">SUSTAINABILITY</h3>
             <p slot="p1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, reiciendis? Consequuntur, ratione? Earum ab dignissimos voluptas quis neque doloribus excepturi, deleniti harum doloremque magni voluptatem eveniet magnam! Distinctio, hic corporis?</p>
             <p slot="p2">HEJ MED DIGIIIIIIIIIIIIIIIIIIIG</p>
           </Tekstbox2>
