--- a/src/components/TekstBox2.astro
+++ b/src/components/TekstBox2.astro
@@ -14,7 +14,7 @@
   .card {
     background: linear-gradient(to bottom, #fee1bb, rgba(37, 38, 39, 0));
     color: #010854;
-    padding: 30px;
+    padding: 30px 30px 10px 30px;
     margin: 80px;
     border-radius: 30px;
     margin-top: 20px;
@@ -37,6 +37,18 @@
 
   .content {
     display: none;
+  }
+
+  .show-less-label {
+    width: 100%;
+    text-align: center;
+    padding-top: 10px;
+  }
+
+  .read-more-label {
+    width: 100%;
+    text-align: center;
+    padding-top: 10px;
   }
   label {
     display: inline-block;
