--- a/src/components/TekstBox2.astro
+++ b/src/components/TekstBox2.astro
@@ -56,6 +56,9 @@
     color: #ff0092;
     font-family: var(--font-jua);
     text-decoration: underline;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
   }
 </style>
 
