--- a/src/components/TekstBox.astro
+++ b/src/components/TekstBox.astro
@@ -43,12 +43,14 @@
     width: 100%;
     text-align: center;
     padding-top: 10px;
+    font-size: 1.5rem;
   }
 
   .read-more-label {
     width: 100%;
     text-align: center;
     padding-top: 10px;
+    font-size: 1.5rem;
   }
   label {
     display: inline-block;
