--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,7 +1,7 @@
 <div id="wrap">
   <nav>
     <div class="logo">
-      <a href="#">
+      <a href="/index/">
         <img src="../img/asdfgyhuji.png" alt="" />
       </a>
     </div>
@@ -15,7 +15,7 @@
       </button>
       <ul class="nav-menu">
         <li class="nav-item dropdown">
-          <a href="#" data-action="dropdown-toggle">Program</a>
+          <a href="/liste/" data-action="dropdown-toggle">PROGRAM</a>
         </li>
         <li class="nav-item dropdown dk">
           <a href="#" data-action="dropdown-toggle">
