--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ import Tekstbox2 from "../components/TekstBox2.astro";
       <div class="gridbutton">
         <div class="firstbutton">
           <ImgButton img="https://copenhagenlightfestival.org/wp-content/uploads/2023/02/MANDALEG.jpeg" />
-          <div class="centered"><a href="/liste/">2024</a></div>
+          <div class="centered"><a href="/liste/" class="center">2024</a></div>
         </div>
 
         <div class="firstbutton">
@@ -76,7 +76,7 @@ import Tekstbox2 from "../components/TekstBox2.astro";
         </div>
       </div>
 
-      <h5>Fonde</h5>
+      <h5>FONDE</h5>
       <div class="gridimg">
         <img src="img/logo1.png" alt="logo1" class="glypto" />
         <img src="img/logo2.png" alt="logo2" class="nordbro" />
@@ -89,6 +89,9 @@ import Tekstbox2 from "../components/TekstBox2.astro";
     </main>
 
     <style>
+      .body {
+        background-color: none;
+      }
       .gridbutton {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -126,11 +129,23 @@ import Tekstbox2 from "../components/TekstBox2.astro";
         top: 50%;
         left: 35%;
         transform: translate(-50%, -50%);
-        z-index: 100;
+
         font-family: "chicle";
         font-weight: normal;
         font-size: 350%;
         color: var(--text-beige);
+      }
+      .center {
+        position: absolute;
+        top: 50%;
+        left: 35%;
+        transform: translate(-50%, -50%);
+
+        font-family: "chicle";
+        font-weight: normal;
+        font-size: 130%;
+        color: var(--text-beige);
+        text-decoration: none;
       }
       .firstbutton {
         position: relative;
@@ -140,6 +155,7 @@ import Tekstbox2 from "../components/TekstBox2.astro";
       }
       h5 {
         font-size: 300%;
+        font-family: "jua";
       }
       .glypto {
         width: 250px;
