--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,7 +1,7 @@
 <div id="wrap">
   <nav>
     <div class="logo">
-      <a href="/index/">
+      <a href="/">
         <img src="../img/asdfgyhuji.png" alt="" />
       </a>
     </div>
